Add a flag to job_runs to indicate whether it was run manually
